testsuite/tests/grammar/invalid_lexers/token_action_1.lkt
import common

lexer foo_lexer {
    @text Example <- "example"
}
